--- a/UI/code/Login_RauMa/DashBoar/FrmThemQuyen.resx
+++ b/UI/code/Login_RauMa/DashBoar/FrmThemQuyen.resx
@@ -117,67 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="clID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clHoTen.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clNgaySinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clGioiTinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clChucDanh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clLoaiNV.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clSDT.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clTaiKhoan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clMatKhau.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clEmail.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnThoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABZJJREFUaEPt
-        mG1sU1UYx3tL260bK+voRte13douqFNgmw6UsfGyN2I0IWhi0CBo/KILJhqJGv0AiYpGNNEPJr5gJCFq
-        fAPki1EQeRmDMZnbYMAYAfbSbR0MxjbabbD5/9/2wl3tcGu8XYn7J7+0957naZ977jnPc85RTWlKd760
-        gc9JUwn4AWjEq4lpEdjv/xp5OcB2cE0tqNrx+RxvTlBfgRHAToiYBPAi8GbGaQ/XFNrd613G33F9AcSA
-        8WoW8Cbr1Mfw2QhieVNp8U++R49f/HLerJrLy10jpKPU2T9NUDWj7SXRanzaEK8RGttLHX1aQTiH643+
-        28qJPb8nVi2crS20t0vBS2ycnbQP7d0gicb/InZE52uZxkr6bssxH8G1F9zFRiX145NpCQeCgyfdy103
-        EjTqWth85De9rdbyLbaXOgck/7kJMRyGB0E4yWDcSgYdZab43fLgJXbkpdajfQDMpvFt9OfK1OkVct/m
-        4ow+nSBwHr3lN1FOC8G1dc7EUQFIuOK0B9DO7DSWmDp9J5emdwf77siz1LANLKOhknoMeHfNt5wKDqK6
-        wH6ebaCQhiG0M9ugOxTsJ/GExfAbbNwgRbRWUBuQedoblqZ3BQexzKTfjfYqwIkvF3t/sGKRtTnYR6Kl
-        xNkDpx7YvSB6KCgG9w1S4Wl3sfOaPIjmYscVTNIOtK8RLf2ifVVBkv6g3FYOE4FNr6mE3R8gIkuMBNAQ
-        akg8nz5jD9o4nKQCtQJP0IexfynYVmJ1mjh8WNXTRI8IKRNcLs8YPakvlrmGUDNOo+1NwN5sXDVGCiYf
-        35fMyd8HckHE9Qjwbc8bPak/m5vC4dALNmoEwe2W5X05+xdaG/F2rsJuNZg0va9TCxfOFzl65cHN1E6r
-        RtvIKy5jyMzTWuzsxZs6BZvPxV+ZRLGC7nPEaaswGW8GeGSRrSlRq67zlDmvywMnsBt2+usG39REFoKK
-        iZPP86zdMCrTXCpz3ZBfS6y1zmC6Zc630DlatAQMbM0214cKWuLr3NSjsOsHC+gUbXoHdcATqsiRpmWO
-        LhTBFtgxQ0WlHgTD395vPh4cPIbTdXOs5jDafwVqGkebEsHZ4uS4kDl/0z0m7oG7gOJrnXDE5cJPSTr1
-        8a4yZ8iJW7fY7g7k/CLRI8r0OoLrrlti7wgVvEQg+3QCq+gVJXoU+LbmzKoNFfSmu2dWoBL7AtfM/9x9
-        VQAdnSdbc8DV9WNU23ezTCxWw1a9phqTeJj3AhWYa6VP+AOTKZ4PtZWMMWlZiQNj/g3gWWMz3LSrKrCz
-        7TLuPwMmRTzbOTPHoKuWLx8kOkqdPejlE7DZKlqrVA8D3y8LrDfT66fzzDwXYkF7gAaRlBHUmGM0xzpL
-        nUPywCVyZsTshQ0fIJ4OAX3AoxnZfBhZYZ7OSc2zIabgiIhrnnqjVn28tcTRLw9aInBOxPV9Fh1k4qKt
-        och0a8hx74AFH9/ETjCNRkpqJfBk6LVVbSVOrzxoiUP5tjMY29wHPC16/FOs1L69D9nOST71i9NbsLxo
-        xf3xnCuFrc1gqNyReJBLYXnQEhhOXr1aOAm7L0SPsbUlFcNP7luZb2vCQ7ShbZ3f5L/XU2Dww3tNR+V/
-        LGd5SjzHcxOQj/tQsgHvd7nmE3L/6kL7WdznpM6nkRIqB4OPpybsD848u+ZbeLTIk7mxzoSCtXmmTl0n
-        /42f51u4g+PhlkG0UEhLgScnMbZCeojAJp5bw4mMYS7o+rZk36reDr24Q5PSrqLiaUQX3oSYTV7NNDJl
-        8ixoOhsnoPcSNOqT7IideZa/cD0IFD+lllQAvFwiY0PPZUE4k88Erm7OSq6M0wh1+B7xpcUqwHHP89Bw
-        C9HbgbR7BfAEPOJizzPFhitOWNaAl8WrO1R6gBcxpSlN6X8klepvju1vHOzjee0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_loaisp_them.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IwAALiMBeKU/dgAABP9JREFUaEPdml9oW2UYxk/nhSIyezEv3K5EShEtiLCNdYNusizNSc45yUmb1rqK
@@ -204,7 +145,43 @@
         NFfsvxluHF3Tsaug7P9mqFpz/2eo2ChQsVGgYmPgGf8AUfgPiIBQabgAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_loaisp_huy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IwAALiMBeKU/dgAABu5JREFUaEPdmltsG0UUhidF4iYorVRQKVJVekvTNjSJvV7b6zj22k7cSC1q1CRc
+        ygtIXASIi2gpAtT7vYUiIV5APBSKqMQDLyDxjgoCIV4oUKDiEZpbY8/a2bVdD+esvcmsfRI7auOWjPRp
+        5X/PnPmPZ3d2VjYTQsxbSHG+QIrzBVKcL5Cii82rJVayXHI9G9MirKh0sHS3wtJRlaXCGsvGfMzQQszc
+        sWJJ4fnFrUZQe8aI+T4GfjBiyqgR95lAxj7GfCNGTAXd9zHXtKcLLyzeaD6+YokR6mSZWICNR9pZKuZl
+        RsLPripeJiJtTPSuhfFXuf1QfiVI0YWcbObilmWi6mOGrn5nRP0CjNcPxkfV81nd/wgUd//NVNyiVDjY
+        n0kov5HGZ0km5r+QinRsT8WURTeuOC8Ul1BaeEw5a+i00WuBx9UzPOFvLnobXNxoKMIKAU8PFHeJMnbd
+        SKh/5v2+hIjOWXErJR5k+WQLG4mGB42EYpCGrjPpuMrziY4BsXlNhReA8itBijJXYaZKtLBCspnlezb0
+        wqJhUUbmirSumjBuspBcBx7QRwnKrwwpyhiJzjIhBoM0G7r/ImVgruG6/0I6HliT7gYfZSi/MqQok0lo
+        ZYJ3weLxBTVwo4BF5nPeHbwTYAjlV4YUZbLxINKUiQeepAYkiXqFEfEII67S5x3wPMZhPHWeAFbQJ4xE
+        sAkg/cqQosxEl8rMLv8DsMv4ixrMBZrtbBM82FoyHW6bvkDU8TzEcQ3ioV/NLwPgMd/FiWhg2UTET/qV
+        IUUZKxJckI3Ct0UM5AKM8eBG26z53nHgmG2aaw9Vm8ZY1OG8BXEYbxeJ/esoEHYyO6ykvoDyK0OKLiLR
+        RbAP/J4axAXMAo96hPXRB9Ct1MyTBwVXWwQPSQViYfAZdevkoXKkENaH78PlWZ7tytwVcN17XgwO3gPd
+        aM9lSFHGimpt1AAu4J7BmbBgBlwtZwnz+H7BPatLM9UdKM2mZ42ti1yuHFhqzmzXvAd1ReS3dLdCF9Kz
+        AynKpHXvi+QAMuVFwTpxQBTTKeg21YoGF+bRPTBT6wXvWGXPmHl0ryhmjHJEqWE/88T+UmGYjxpHpqv9
+        OehGenYgRRnYN35GJpfBS66rXRhofO/ronhlDLpKDWbQOgIFetfaR/wsN4w39+yy+xtdHXXdd+DrE+hK
+        enYgRRlYnX4mk1eChnDFgwKoAoupcZH/5itRHB8vK6U2WRj0m3F1rSATU36C7qRnB1KUgUTDlYmnxSkQ
+        76k9O4WonMHKZhe2046v91EwhXIZMpCeHUhRBhIVqhPPgF3gptIMvvWqKP59CdJUN9TxvD1jGD+rwmzy
+        kIb07ECKMkTS2iRgVfQ2C962UuS//hLSVDfU8TzGYTyZpwbQSM8OpCgDSWY9c/Zyr66D1e+gKP77D6Sp
+        bqjjefs5iMv/DZq5kYqk0+MU5lsnrFOHhchmIcUMDc5bpw7Z8eROZkaUIchAenYgRRlclejkFUwWBjuP
+        d45UFVYcHhK5c2fso6tlMhB/uFxg/TOYiSs/Qm/SswMpymR136dUchdoCDfMuEt5FwoDw3LDx4D55iuC
+        ty63j/jZ1bBAmGm7uPpXzTPQk/TsQIoyqWCovh0KYJ0+VrWlKmYzwty3G7Zca0v3Fz4m9r0BesUlC/3M
+        00cnc5HjyPRq175DsZ5a2mroNb5Je2+5SZjH9kEXqaXT8ECHwvCSC8Fyn/DbR/yMBQqeLgeW2gT0tzfZ
+        NfaW8NJ6Nb986QboQnp2IEUXh9lCIxI4Tw3iItwuODyv7MsSmwWb5rd32TPF5UsN702Is2cQdibOVgz7
+        2XGQpyp3BfDC+i1YXwjdaM9lSFFmor/5FkP3D1KDuEDTeM/AFgpfdUxcBfEypO4hu0C4R3EvCnEYb78y
+        1bmg8O7AQLa95drf54zOEKyY6r1ZXfmdGsgFGsMZdC4t3ExPZxZ1PI+XNMbjjNVRGKySvxjJwBK+tYv0
+        K0OKMld6VKRpvMe3nRqMxHltqWUWz2NcjXvMAQoTY2F/32g42DQa1ki/MqQoM9Kr2owm1dvhwXmOGrRh
+        xH1nh0PB24aCGkMovzKkKDOc9NqM9HgZj7Q3G1HPH+TAcwnMGA+HfuWdnWuGfBF22Ru1ofzKkKJMvm/r
+        JIVtD7P8ls061z31vwZdB3hYG84/e1+k8NrdLPfyQpZ7qQTlV4YUXQwMTjH4KBTZx4Yjwb6G/lbQ5dsm
+        dt/KxBHwe0iC8itBii76+6cYGGA5KG5UCzX2V56Qh4lddzBxAPzulaD8SpCiC6K4MbiZG/r7nNbo4hr5
+        y+oNLG7ufxO/CYqb/t8McWUYnlGlQvAY9w3N6t8Mc1bc/xhSnC+Q4nyBFOcHgv0HEIByPg6eO/sAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="btn_loaisp_sua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IwAALiMBeKU/dgAABKpJREFUaEPdmU1sVFUUx+98dF51ZdQujAZjRBMXJsYikC5qKx8RjUsgsVWU1haq
@@ -230,62 +207,7 @@
         XBCD5QGp/wAz8XKN5YCcEwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnLamMoi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAAC4dJREFUaEPdWgtwlNUVvnWqnTIVitNOWy0PQeWdkP13s7sJhsUSks3u/ptNCEl2
-        /3938w4bCDQkvEIFQaX4AmmFQWzRisEiooKigIoWkPCcgNQXiIriIFV5BQRBT8+52ZDN3puEEIMzHuab
-        hPPfx/n+e+45594/DAB+shAUZrtPgCldZ4rbz4wuP1NcOov35DBzuo/FujUW68lmpkAhM2bQ8wC1STCo
-        WrXi0lYYVb0OcRwBEpC+TlH1GoNLm25061ajqjGjB+fQ8pjiy2OG3CCzjtJZ4qgAzq8xk1tnRvypuINo
-        R3EzRPMgCIr2kIvBiWIyxjCTVtgdyYVMLn07GvyNSU6mRYTbn0XUIrmQkhvsruj5zODN+/HIDVX1LnEe
-        b6VJ9R+ONLbDcGqfKNnBCsOYQBdryo9ALt7jtSnOwC4kJjewo3BqgIR2We3+pKtHjvaFqs1AA84LBrUB
-        Axns0qTPWgK6+nmTy19tcnU+uWuR2FKZEZEgAnFOHwxKGQN9h6dDD2sa3Gixw823u6BnogP+iP+/OUmF
-        /iNHQ2xabpuEFTeR1JaY3P5rOpGcvlw2eSQGoMG32NIhxp4DGaVVMGfhY1Cz5hXYsLkW3qjdDa+/tRNW
-        vfwqzP9HDRRNvRsSR+fDbXdkwK0jPPyFIAHpuGE8YeoccvoiyWQcZBC9/V6JTox8fph2/yOwe/97cPrM
-        WRyyZblw4QJ8dvQYLHryGXDkT4QeCQ4YNGoMxKcHpPMQTKr29ysmZ7XnXoLF7mXmVCSn6lWYh+STIbHB
-        Kdnc5Yqn3wP73juIw7RfTpyqh8VPPQtxDh+6sls6FwHJoZsGJiquEqY4kFhaA3AIAYJigL2Uo3/qWBaT
-        VsjMLm8SuqN0InrD/f6UCQOTs+ARfPs/hOx6+x1cxQnQa5iLe0MLbvq90RlIVHKLmJKHJAOXSa6PfQJH
-        r9QK1s8Rus6c7t0nGRyJ+TmpIRg01r62GbvK5dCnR3Cf7YB/rlwDCx9/GhYvXwUrX9wIO/buh+OnTodb
-        NRdy1ayyqdAniVawhWCT5qtTCgqvNU4IMWNZqcCDICj62ssvIcaVP0E6MIJckYLA8+s3YTdRKHhU3P0Q
-        WDKCGCGd3NBbbB4ebHrjqtBPZ+Gf4eFlT8PXJ06GezXJV8dPQnrxJHR3tbGCaQ7ypqxgWazfz2L8usCD
-        IChus49jt9rH46qN7WZSfUeEQRHkLj1x8/918ePYpbmcPF0PMx5czKPmjZZU/hKijcN8xccggtTGHhzP
-        o2m0HPz4U0jKLoIhqTnN+l+CQ/t0UProrgMyMgUeBEGhqJSoMeyr/nLpgIj+uM8ySiuh/mzzaPjFl19B
-        VmgK3GRJ41GvjbDeFGWHObmL17zwSnikJql5/hXojcFK1j+MMrIXmwoQFAasAgwqVgKqvoc6kwGUsyhw
-        EMi1brLa4bWtO7B5k9A+GamHoHvsHdzgiMnbBM1B5PpglFy3aWt4xAZZ/59t3K1l/QjoFbtNeBrBpgIE
-        hcJLLN2MHS9S56FpXnAUTERXWwSzFiyByXMX4j5ZARcuXsTmTbJxy3bIq7oL/JNmYpnlkxrSGihAUcVC
-        RF96fQsc++pr2F63H9zFFTA4NVvaJ4wLSFBBEwQugmJoSj7Dgria8hrWkTxozMYqoy357rvv+M93D3zE
-        V/pKCBIxcudYey7Ycor5GINGZXG9rH0jcA9PxakFLoLC6AxSDflsY8eBOFliVgG8f+gwPm5bKu9dwMup
-        yMnbCyJFBKkckz2XgJKswEVQYMNuiP0RHXmhG6ychY9blzWvvsmTb0xL0a0doH3bjr27D6cXuAgKzB/9
-        sHF9ZGcqiSj0r1y3EZvI5esTp2BEbgn0xfDelhu1BupLpGg70InCgL9fxnin0ASBi6CwjC40R78xvhcw
-        Xw3HffD5F//DZqLMnL+koXDuADECuSMRe3TFc/Dkc+tgAEbRy9m/KAIXQTHI5rKZJFU5JWKq2ivvWYDN
-        mgulBcp9Qx1eoV97QdVLweTZ4ZEBxs6Yy3UUTWXtG4EicBEUv7y+W3JCdql0AKoUqGJf90ZTLjp+8jRW
-        GOVYXqnYpmPuSCHf7AnCAaxMGuXDw5/hyml8BVvzChSBi6Do/oeeNmtWsXQAGpz2Ae2tM2e/weYAsx9e
-        yk/a7U3c0aD+PRLSYNmqtXzcSFn2zBoe1FrzDBSBi6BQnD5K4NIBCESQyqF5i5+Ata9u5kmeVrQje436
-        0n6l0u3cufNoRnP5Fg+12ePolEDeIR8DReAiKOLdAYqWp6M7R4L2H5Vi/GoAI2lHiBEGJI/m6aPunffR
-        BLnswZM9vcgYDDiS+ehYIXARFPGq3hWNfzuqswByIwrTsmftAZ0QemLhvGBZDU7fujy49CnuuuI4/r34
-        WOAiKIzpAUrkq8QBRNDNFRW8fPUkzy8HA7G8GoMu17iHW5MTeLh1F1Xwo1KzcdzaSnwscBEUMelBPBn4
-        p7RmLLlF/5GZMBzPWr6JM/DgiNEsXPTK2rcEWv2bLHZ4YeObOHWDXAzXqC3JUy+8zE8PcY3BxYVzenIm
-        4yOBi6Cg4w6eCkzYkZ8KZKDVClbOhEOHj/A3vmVnHSRkNlzRtXZzJcMQDP+55dUw6Z75kI/5befe/6IZ
-        TUJnxrmLlsG0+x6BuxY+im2n830XEZ2/RcRhU4GLoIhTNQ4kWNtoQDTI77fteRubN8mbtbsbznxIsD0r
-        SC+DCoDrByeBXnEn5k2qpJrk3y9thN+ZRvEXR+Pzk33ETVy8S9+W4A4KPAiCwoTEwiiJNCISFJIp90TL
-        S5u28P1HeY/cpjWSjQaS0ZQGxs+6H+qj7jmPHvsS7vCW8pvr6P6NUNz+IooT2FyAoAiobpaH0Jzpv7La
-        vZ/g/hMGpPovHvV73/0AuzQXcqvscdP46tLVOQWdyDdNhKlWpDTy+/gUMOPK0aWsTMqRMJV8kXNHwpLm
-        O9SlamqXn985U+BBEBQxobEsFjG4fBzrGxhbGo8rIRuYVi9ZC/HrhWihU/ry59dBsGoWP5PRNQF9G6Ab
-        MPqd3MtTUgUPLH0Sz4mfhHs1F7oGpJoyFnObbH4z2oX2FbM5cxi7e47AgyAq5s1D3MfYw/PZL6ZU/yxx
-        ZE6t9FIWV4OiVlpeORz4SH6Q/R7/vf/hx/D6W7tg9YY3YPX6TfAy1qV7MVnTLVlLsqRmNV/ZhlWXubYf
-        ElJ9W6+rvvMatmA+Y3PnCjwIgqLrtGkN+Es1u7G8glk8uhnTwrfRBBtTBa0I7QvZ1Vx75VR9PT86Uf3K
-        vxm0QMyoaueHJXuMPfKL2A0VFeyG8nKBB0FQWAsKGpBfwMxFhcwQKmFKhj9EHwPFiRpAb5mq9tl/ewwO
-        f34Uh2m/bNi8HdzFk7grUoHcUjBS1AC6ZHbpiOHDWHJiAkuxWFiK1SrwIAgKpbi4OUqKmYF/zNcfkE1G
-        oLMWuRBV7iNySmD2wqX8g8ip+jM4pFzoQolulekqvmDqHH7zRXuyzTTiDtxnceQw2/DhzGazXQIOKUBQ
-        SMllcnKEVj88UmKlPEcrSUWuiqXSjIcW8z20Ys16eHrtevjX6hexRlwOZTPngQ1fBBUE5IZDeP5qg5iq
-        P4oHadYJ5PzM5NSI4Hz6jESQTM5BJClKUsJt/DZAIZ1A6YH2KUXMhivAyyi+cb8rqvYgFhas08gZHZTc
-        aQK9THH5z0kN+YGBhM5hFRLC0wpVTZ1Lzuz2siFqERvsKkqyOnM3WdD9sEqQGnaloPFoXEuatiEmw3u7
-        wZPLzA034VeHXFxqHhvoLWC98stKsJI5KDPySpFg937QO7+ssJ8P51ez2VUnZ0wOsN6FIfbrCVXMk5bR
-        zerWSjEHdegviND47ZZ0vdRjz+zavbyK9Sgcz+IdWVefnDIqyPrmlbLflFWwTEcGS3D7mOLiV/FX/Ldf
-        ZDySw/Ey2W9DFax3XhkGsTE/HLmfDoD9H1B9NGYA/FzIAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_loaisp_xoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IwAALiMBeKU/dgAAAz9JREFUaEPt2MlPE3EUB/BeNNGD8aR3z2o8epGTpp48GBQUubiwFSG4sbgjBBeI
@@ -305,17 +227,10 @@
         Q2MAy0/c+ChG8ZjGYAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="imglNhanVien.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="clMaQuyen.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAOpJREFUOE/V
-        kj0KwkAUhFP4g6W3EC1E+0BAC3OAQP7q3EC0svAmVoKVWKi14iUSsRJLay1Ev5VXuLD+NCIODMu8nXlv
-        Nxvrq3AcJxeGYS+KogweYQoHnueVxPIcKhzH8ZrA3Pf9Bo3KaqU2prZR+2I1A1MfTkVqoMkMdkWaQXgX
-        BEFFpAb2qjTYijQD05m7FkRqcF23yJVOIs1QEzhBTaQG9uoMyESawYQhxolIDYQXb78Bhg7GK7y/QpIk
-        eWpN9BKuXr4CRhvTgdV5+A8uMFWTX4YJtDHu1TQpfQ6Crd+EFTj6iLAt8m9gWTfdj2MXkSeLMwAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
+  <metadata name="clLoaiQuyen.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
